--- a/package.json
+++ b/package.json
@@ -7,17 +7,35 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:build": "tauri build",
+    "tauri:dev": "tauri dev",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tauri-apps/api": "^1",
+    "framer-motion": "^11.3.31",
+    "lucide-preact": "^0.438.0",
     "preact": "^10.16.0",
-    "@tauri-apps/api": "^1"
+    "preact-redux": "^2.1.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@preact/preset-vite": "^2.5.0",
     "@tauri-apps/cli": "^1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.3.1"
   }
 }
